@@ -247,7 +247,7 @@ SgSocket* Sg_CreateServerSocket(SgString *service,
 
 int Sg_SocketReceive(SgSocket *socket, uint8_t *data, int size, int flags)
 {
-  int count = 0, osize = size;
+  /* int count = 0, osize = size; */
   ASSERT(Sg_SocketOpenP(socket));
   for (;;) {
     const int ret = recv(socket->socket, (char*)data, size, flags);
@@ -261,12 +261,15 @@ int Sg_SocketReceive(SgSocket *socket, uint8_t *data, int size, int flags)
 	return ret;
       }
     }
+    return ret;
+#if 0
     if (ret == 0) return count;
     count += ret;
     if (count >= osize)
       return count;
     data += ret;
     size -= ret;
+#endif
   }
 }
 
@@ -471,7 +474,11 @@ static int64_t socket_read_u8_all(SgObject self, uint8_t **buf)
       break;
     } else {
       Sg_WritebUnsafe(SG_PORT(buffer), read_buf, 0, read_size);
-      mark += read_size;
+      if (1024 != read_size) {
+	break;
+      } else {
+	mark += read_size;
+      }
     }
   }
   *buf = Sg_GetByteArrayFromBinaryPort(SG_PORT(buffer));
